[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "void-logging"
version = "0.2.1"
description = "Void's logging library"
readme = "README.md"
authors = [
    { name = "Mathieu Suchet", email = "msuchet63@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "rlgym-learn",
    "rlgym-learn-algos",
    "rlgym[api]",
    "rlgym[rocket-league]"
]
# Optional: define classifiers for PyPI
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["void_logging*"]
