[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlgym-learn-logging"
version = "0.4.0"
description = "A logging library for RLGym and RLGym Learn"
readme = "README.md"
authors = [
    { name = "Mathieu Suchet", email = "msuchet63@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "rlgym-learn-algos",
    "rlgym[rl-sim]",
    "rich" # For display
]
# Optional: define classifiers for PyPI
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rlgym_learn_logging*"]
